--- a/index.html
+++ b/index.html
@@ -29,32 +29,11 @@
 
     <link rel="shortcut icon" href="img/favicon.ico"></link>
 
-
-<style>
-#myProgress {
-  width: 100%;
-  background-color: #ddd;
-}
-
-#myBar {
-  width: 1%;
-  height:5vm;
-  background-color: #0B67E0;
-  font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-</style>
-
-
 </head>
 
-	<body onload="myFunction();">
-
-
-
-
+<body>
 
 <section id="home" style="background-color:rgb(35,49, 64);">
-<!-- Header -->
   <div class="intro-header">
       <div class="row">
         <div class="col-lg-12">
@@ -62,18 +41,13 @@
             <img src="img/logo100.jpg">
             <h1>Plus and Times</h1>
             <h3>Improve your mind</h3>
+            <h3>&nbsp;</h3>
             <a href="level01_925148.html" class="btn btn-primary">Start</a>
           </div>
         </div>
       </div>
-    <!-- /.container -->
-
   </div>
-  <!-- /.intro-header -->
 </section>
-		<!-- Footer -->
-
-
 
 <footer>
     <div class="container">
