--- a/level01_925148.html
+++ b/level01_925148.html
@@ -213,7 +213,7 @@
       <div class="row text-center" style="background-color:rgb(35,49, 64);">
         <div class="col-xs-12">
           <div>
-            <img style="vertical-align:middle" src="img/logo50.jpg">
+            <img style="vertical-align:middle" src="img/logo200.jpg" width="45" height="45"  >
             <span class="name" align="left" style="color:white; font-size:20px">  Plus and Times </span>
           </div>
         </div>
@@ -230,7 +230,7 @@
       <div id="myProgress">
       <div id="myBar">0%</div>
       </div>
-      <h6 style="color:rgb(201,48,44);"> <b>Instructions:</b> Order doesn't matter; Use the virtual keys. </h6>
+      
     </div>  
     <div class="col-xs-3"></div>
   </div>
@@ -319,8 +319,8 @@
           <div class="col-md-2 col-xs-2">
              <div class="row">
              <h2> &nbsp; </h2>
-              <img  id="myImage"   src="img/pensativo50.jpg" >
-              <h2> &nbsp; </h2>
+              <img  id="myImage" src="img/pensativo50.jpg" class="img-emoticon-pat" >
+              <h6 style="color:rgb(201,48,44);"> <b>Instructions:</b> Order doesn't matter; Use the virtual keys. </h6>
               </div>
               <div class="row text-center">
               <a href="#" onclick="compara();" class="btn btn-primary">Go</a>
@@ -385,6 +385,7 @@
   <h6 style="font-size:0px"> B  = <a style="font-size:0px" id="n2"></a></h6>
 
 </section>
+
 
 <!-- Footer -->
 <footer>
