--- a/level04_844676.html
+++ b/level04_844676.html
@@ -213,7 +213,7 @@
       <div class="row text-center" style="background-color:rgb(35,49, 64);">
         <div class="col-xs-12">
           <div>
-            <img style="vertical-align:middle" src="img/logo50.jpg">
+            <img style="vertical-align:middle" src="img/logo200.jpg" width="45" height="45"  >
             <span class="name" align="left" style="color:white; font-size:20px">  Plus and Times </span>
           </div>
         </div>
@@ -318,7 +318,7 @@
           <div class="col-md-2 col-xs-2">
              <div class="row">
              <h2> &nbsp; </h2>
-              <img  id="myImage"   src="img/pensativo50.jpg" >
+              <img  id="myImage" src="img/pensativo50.jpg" class="img-emoticon-pat" >
               <h2> &nbsp; </h2>
               </div>
               <div class="row text-center">
