--- a/you_win.html
+++ b/you_win.html
@@ -29,25 +29,51 @@
 
     <link rel="shortcut icon" href="img/favicon.ico"></link>
 
+
+<style>
+#myProgress {
+  width: 100%;
+  background-color: #ddd;
+}
+
+#myBar {
+  width: 1%;
+  height:5vm;
+  background-color: #0B67E0;
+  font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+</style>
+
+
 </head>
 
-<body>
+	<body>
+
+
+
+
 
 <section id="home" style="background-color:rgb(35,49, 64);">
+<!-- Header -->
   <div class="intro-header">
       <div class="row">
         <div class="col-lg-12">
           <div class="intro-message">
             <img src="img/logo100.jpg">
-            <h1>Plus and Times</h1>
-            <h3>Improve your mind</h3>
-            <h3>&nbsp;</h3>
-            <a href="level01_925148.html" class="btn btn-primary">Start</a>
+            <h1>You win!!</h1>
+            <h3>Congratulations!!</h3>
+            <a href="special_level.html" class="btn btn-primary">Play the Special Level</a>
           </div>
         </div>
       </div>
+    <!-- /.container -->
+
   </div>
+  <!-- /.intro-header -->
 </section>
+		<!-- Footer -->
+
+
 
 <footer>
     <div class="container">
@@ -78,7 +104,6 @@
 <script src="js/landing-page.js"></script>
 
 
-
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -89,6 +114,7 @@
   ga('send', 'pageview');
 
 </script>
+
 
 
 	</body>
