--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-md-4">
-                <p class="copyright text-muted small">Script developed by <a href="http://www.leoneveiga.com.br" target="_blank"> Leone Veiga</a> - Brazil - 2017</p>
+                <p class="copyright text-muted small">Developed by <a href="http://www.leoneveiga.com.br" target="_blank"> Leone Veiga</a> - Brazil - 2017</p>
             </div>
             <div class="col-md-4">
                 <p class="copyright text-muted small">contact.plusandtimes@gmail.com</p>
             </div>
             <div class="col-md-4">
-                <p class="copyright text-muted small">Template adapted from <a href="http://jekyllthemes.org/" target="_blank">Jekyll Themes</a></p>
+                <p class="copyright text-muted small">Page Template adapted from <a href="http://jekyllthemes.org/themes/landing-page/" target="_blank">Landing Page Jekyll</a></p>
             </div>
         </div>
     </div>
