--- a/index.html
+++ b/index.html
@@ -34,18 +34,20 @@
 <body>
 
 <section id="home" style="background-color:rgb(35,49, 64);">
-  <div class="intro-header">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="intro-message">
-            <img src="img/logo100.jpg">
-            <h1>Plus and Times</h1>
-            <h3>Improve your mind</h3>
-            <h3>&nbsp;</h3>
-            <a href="level01_925148.html" class="btn btn-primary">Start</a>
+  <div class="container">
+    <div class="intro-header">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="intro-message">
+              <img src="img/logo100.jpg">
+              <h1>Plus and Times</h1>
+              <h3>Improve your mind</h3>
+              <h3>&nbsp;</h3>
+              <a href="level01_925148.html" class="btn btn-primary">Start</a>
+            </div>
           </div>
         </div>
-      </div>
+    </div>
   </div>
 </section>
 
