--- a/you_win.html
+++ b/you_win.html
@@ -54,7 +54,7 @@
 
 
 <section id="home" style="background-color:rgb(35,49, 64);">
-<!-- Header -->
+  <div class="container">
   <div class="intro-header">
       <div class="row">
         <div class="col-lg-12">
@@ -70,6 +70,7 @@
 
   </div>
   <!-- /.intro-header -->
+  </div>
 </section>
 		<!-- Footer -->
 
