--- a/level02_818074.html
+++ b/level02_818074.html
@@ -57,6 +57,8 @@
 
     <script src="js/plusandtimes-leone.js"></script>
  
+<footer>
+    <div class="container">
       <div class="row text-center" style="background-color:rgb(35,49, 64);">
         <div class="col-xs-12">
           <div>
@@ -65,10 +67,12 @@
           </div>
         </div>
       </div>
+    </div>
+</footer>
 
 
 <!--  <hr>  =============================================== -->
-
+<div class="container">
   <div class="row text-center">
     <div class="col-xs-3">
     </div>
@@ -80,9 +84,9 @@
     </div>  
     <div class="col-xs-3"></div>
   </div>
-
+</div>
 <!-- <hr> =============================================== -->
-
+<div class="container">
 <div class="row text-center" >
   <div class="col-xs-2"></div>
   <div class="col-xs-8">
@@ -100,14 +104,14 @@
   </div>
   <div class="col-xs-2"></div>
 </div>
-
+</div>
 <!--
 <i class="fa fa-refresh fa-spin" style="font-size:24px"></i>
 <i class="fa fa-cog fa-spin" style="font-size:24px"></i>
 -->
 
 <hr> <!-- =============================================== -->
-
+<div class="container">
         <!-- Formulário e teclados -->
         <div class="row text-center">
           
@@ -221,7 +225,7 @@
 
           <div class="col-md-2 col-xs-1"></div>
         </div>
-
+</div>
 <!-- =============================================== -->
 
   <p style="font-size:0px">A = <a id="mostra_user_A"></a></p>
