--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
               <img src="img/logo100.jpg">
               <h1>Plus and Times</h1>
               <h3>Improve your mind</h3>
-              <h3>&nbsp;</h3>
+              <h3>
+              <a href="http://www.plusandtimes.com/pt-br"><img src="img/bra.png" class="img-flag-pat"></a>
+              <a href="http://www.plusandtimes.com">      <img src="img/eng.png" class="img-flag-pat"></a>
+              </h3>
               <a href="level01_925148.html" class="btn btn-primary">Start</a>
             </div>
           </div>
