--- a/pt-br/you_win.html
+++ b/pt-br/you_win.html
@@ -62,6 +62,7 @@
             <img src="img/logo100.jpg">
             <h1>Você venceu!!</h1>
             <h3>Parabéns!!</h3>
+            <h3><img src="img/sunglass.png" class="img-emoticon-pat"></h3>
             <a href="special_level.html" class="btn btn-primary">Jogue o Nível Especial!!</a>
           </div>
         </div>
