--- a/you_win.html
+++ b/you_win.html
@@ -60,10 +60,10 @@
         <div class="col-lg-12">
           <div class="intro-message">
             <img src="img/logo100.jpg">
-            <h1>Você venceu!!</h1>
-            <h3>Parabéns!!</h3>
+            <h1>You win!!</h1>
+            <h3>Congratulations!!</h3>
             <h3><img src="img/sunglass.png" class="img-emoticon-pat"></h3>
-            <a href="special_level.html" class="btn btn-primary">Jogue o Nível Especial!!</a>
+            <a href="special_level.html" class="btn btn-primary">Play the Special Level</a>
           </div>
         </div>
       </div>
@@ -73,22 +73,21 @@
   <!-- /.intro-header -->
   </div>
 </section>
+		<!-- Footer -->
 
 
 
-
-<!-- Footer -->
 <footer>
     <div class="container">
         <div class="row text-center">
             <div class="col-md-4">
-                <p class="copyright text-muted small">Script desenvolvido por <a href="http://www.leoneveiga.com.br" target="_blank"> Leone Veiga</a> - Brasil - 2017</p>
+                <p class="copyright text-muted small">Script developed by <a href="http://www.leoneveiga.com.br" target="_blank"> Leone Veiga</a> - Brazil - 2017</p>
             </div>
             <div class="col-md-4">
                 <p class="copyright text-muted small">contact.plusandtimes@gmail.com</p>
             </div>
             <div class="col-md-4">
-                <p class="copyright text-muted small">Template adaptado do <a href="http://jekyllthemes.org/" target="_blank">Jekyll Themes</a></p>
+                <p class="copyright text-muted small">Template adapted from <a href="http://jekyllthemes.org/" target="_blank">Jekyll Themes</a></p>
             </div>
         </div>
     </div>
