--- a/level01_925148.html
+++ b/level01_925148.html
@@ -65,6 +65,15 @@
           <div>
             <img style="vertical-align:middle" src="img/logo200.jpg" width="45" height="45"  >
             <span class="name" align="left" style="color:white; font-size:20px">  Plus and Times </span>
+          <p>
+            <a> Levels: </a>
+            <a href="level01_925148.html" class="btn-xs btn-default" style="background-color:rgb( 23, 186, 156);">01</a>
+            <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>02</a>
+            <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>03</a>
+            <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>04</a>
+            <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>05</a>
+            <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled> &nbsp; &#8734; &nbsp;</a>
+          </p>
           </div>
         </div>
       </div>
