--- a/pt-br/special_level.html
+++ b/pt-br/special_level.html
@@ -64,6 +64,15 @@
           <div>
             <img style="vertical-align:middle" src="img/logo200.jpg" width="45" height="45"  >
             <span class="name" align="left" style="color:white; font-size:20px">  Plus and Times </span>
+          <p>
+            <a> Níveis: </a>
+            <a href="level01_925148.html" class="btn-xs btn-default" style="background-color:rgb(139, 221, 206);">01</a>
+            <a href="level02_818074.html" class="btn-xs btn-default" style="background-color:rgb(139, 221, 206);">02</a>
+            <a href="level03_218683.html" class="btn-xs btn-default" style="background-color:rgb(139, 221, 206);">03</a>
+            <a href="level04_844676.html" class="btn-xs btn-default" style="background-color:rgb(139, 221, 206);">04</a>
+            <a href="level05_161098.html" class="btn-xs btn-default" style="background-color:rgb(139, 221, 206);">05</a>
+            <a href="special_level.html"  class="btn-xs btn-default" style="background-color:rgb( 23, 186, 156);"> &nbsp; &#8734; &nbsp;</a>
+          </p>
           </div>
         </div>
       </div>
