--- a/teste_face.html
+++ b/teste_face.html
@@ -41,6 +41,7 @@
 <body onload="myFunction(); myFunction2();">
 
 
+<!-- Facebook -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -49,7 +50,7 @@
   js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-
+<!-- =========== -->
 
 
 
@@ -198,7 +199,7 @@
               <div class="row text-center">
               <a href="#" onclick="compara();" class="btn btn-primary">Go</a>
             </div>
-
+              <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
           </div>
 
           <div class="col-md-3 col-xs-4">
@@ -263,18 +264,18 @@
 <footer>
     <div class="container">
         <div class="row text-center">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <p class="copyright text-muted small">Script developed by <a href="http://www.leoneveiga.com.br" target="_blank"> Leone Veiga</a> - Brazil - 2017</p>
             </div>
             <div class="col-md-3">
                 <p class="copyright text-muted small">contact.plusandtimes@gmail.com</p>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-4">
               <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-1">
                 <p class="copyright text-muted small">Template adapted from <a href="http://jekyllthemes.org/" target="_blank">Jekyll Themes</a></p>
             </div>
         </div>
