--- a/level01_925148.html
+++ b/level01_925148.html
@@ -49,7 +49,7 @@
       var minB = 1;
       var maxB = 6;
 
-      var xpc = 1;
+      var xpc = 2;
 
       var next = "level02_818074.html";
 
@@ -72,7 +72,6 @@
             <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>03</a>
             <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>04</a>
             <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>05</a>
-            <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled> &nbsp; &#8734; &nbsp;</a>
           </p>
           </div>
         </div>
@@ -181,7 +180,7 @@
              <div class="row">
              <h2> &nbsp; </h2>
               <img  id="myImage" src="img/pensativo50.jpg" class="img-emoticon-pat" >
-              <h6 style="color:rgb(201,48,44);"> <b>Instructions:</b> Order doesn't matter; Use the virtual keys. </h6>
+              <h6 style="color:rgb(201,48,44);"> <b>Tips:</b> Order doesn't matter; Use the virtual keys. </h6>
               </div>
               <div class="row text-center">
               <a href="#" onclick="compara();" class="btn btn-primary">Go</a>
