--- a/level02_818074.html
+++ b/level02_818074.html
@@ -40,6 +40,20 @@
 
 <body onload="myFunction(); myFunction2();">
 
+
+<!-- Facebook -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<!-- =========== -->
+
+
+
 <section >
 
   <script>
@@ -251,11 +265,16 @@
             <div class="col-md-4">
                 <p class="copyright text-muted small">Script developed by <a href="http://www.leoneveiga.com.br" target="_blank"> Leone Veiga</a> - Brazil - 2017</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <p class="copyright text-muted small">contact.plusandtimes@gmail.com</p>
             </div>
+
             <div class="col-md-4">
                 <p class="copyright text-muted small">Template adapted from <a href="http://jekyllthemes.org/" target="_blank">Jekyll Themes</a></p>
+            </div>
+
+            <div class="col-md-1">
+              <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
             </div>
         </div>
     </div>
