--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -33,6 +33,21 @@
 
 <body>
 
+
+<!-- Facebook -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.10';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<!-- =========== -->
+
+
+  
+
 <section id="home" style="background-color:rgb(35,49, 64);">
   <div class="container">
     <div class="intro-header">
@@ -60,11 +75,15 @@
             <div class="col-md-4">
                 <p class="copyright text-muted small">Script desenvolvido por <a href="http://www.leoneveiga.com.br" target="_blank"> Leone Veiga</a> - Brasil - 2017</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <p class="copyright text-muted small">contact.plusandtimes@gmail.com</p>
             </div>
             <div class="col-md-4">
                 <p class="copyright text-muted small">Template adaptado do <a href="http://jekyllthemes.org/" target="_blank">Jekyll Themes</a></p>
+            </div>
+
+            <div class="col-md-1">
+              <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
             </div>
         </div>
     </div>
