--- a/pt-br/you_win.html
+++ b/pt-br/you_win.html
@@ -49,7 +49,16 @@
 
 	<body>
 
-
+<!-- Facebook -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.10';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<!-- =========== -->
 
 
 
@@ -63,6 +72,7 @@
             <h1>Você venceu!!</h1>
             <h3>Parabéns!!</h3>
             <h3><img src="img/sunglass.png" class="img-emoticon-pat"></h3>
+            <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
             <a href="special_level.html" class="btn btn-primary">Jogue o Nível Especial!!</a>
           </div>
         </div>
@@ -84,11 +94,15 @@
             <div class="col-md-4">
                 <p class="copyright text-muted small">Script desenvolvido por <a href="http://www.leoneveiga.com.br" target="_blank"> Leone Veiga</a> - Brasil - 2017</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <p class="copyright text-muted small">contact.plusandtimes@gmail.com</p>
             </div>
             <div class="col-md-4">
                 <p class="copyright text-muted small">Template adaptado do <a href="http://jekyllthemes.org/" target="_blank">Jekyll Themes</a></p>
+            </div>
+
+            <div class="col-md-1">
+              <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
             </div>
         </div>
     </div>
