--- a/you_win.html
+++ b/you_win.html
@@ -75,7 +75,7 @@
             <h3>Congratulations!!</h3>
             <h3><img src="img/sunglass.png" class="img-emoticon-pat"></h3>
             <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
-            <a href="special_level.html" class="btn btn-primary">Play the Special Level</a>
+            <p href="special_level.html" class="btn btn-primary">Play the Special Level</p>
           </div>
         </div>
       </div>
