--- a/you_win.html
+++ b/you_win.html
@@ -74,8 +74,8 @@
             <h1>You win!!</h1>
             <h3>Congratulations!!</h3>
             <h3><img src="img/sunglass.png" class="img-emoticon-pat"></h3>
-            <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
-            <p href="special_level.html" class="btn btn-primary">Play the Special Level</p>
+            <h3><div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div></h3>
+            <a href="special_level.html" class="btn btn-primary">Play the Special Level</a>
           </div>
         </div>
       </div>
