--- a/pt-br/you_win.html
+++ b/pt-br/you_win.html
@@ -72,7 +72,7 @@
             <h1>Você venceu!!</h1>
             <h3>Parabéns!!</h3>
             <h3><img src="img/sunglass.png" class="img-emoticon-pat"></h3>
-            <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+            <h3><div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div></h3>
             <a href="special_level.html" class="btn btn-primary">Jogue o Nível Especial!!</a>
           </div>
         </div>
