--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
               <h1>Plus and Times</h1>
               <h3>Improve your mind</h3>
               <h3>
-              <a href="http://www.plusandtimes.com/pt-br"><img src="img/bra.png" class="img-flag-pat"></a>
-              <a href="http://www.plusandtimes.com">      <img src="img/eng.png" class="img-flag-pat"></a>
+                <a href="http://www.plusandtimes.com/pt-br"><img src="img/bra.png" class="img-flag-pat" data-toggle="tooltip" data-placement="top" title="Versão em Português"></a>
+                <a href="http://www.plusandtimes.com"      ><img src="img/eng.png" class="img-flag-pat" data-toggle="tooltip" 
+                data-placement="top" title="English Version"></a>
               </h3>
               <a href="level01_925148.html" class="btn btn-primary">Start</a>
             </div>
