--- a/pt-br/level01_925148.html
+++ b/pt-br/level01_925148.html
@@ -174,9 +174,11 @@
                       </div>
                       <div class="row">
                         <div class="btn-group">
-                          <a type="button" class="btn btn-info"    onclick="PA0();"> C </a>
+                          <a type="button" class="btn btn-info"    onclick="PA0();" data-toggle="tooltip" 
+                          data-placement="bottom" title="Limpar"> C </a>
                           <a type="button" class="btn btn-primary" onclick="A0();">0</a>
-                          <a type="button" class="btn btn-basic"  onclick="MA0(); " disabled> &minus; </a>          
+                          <a type="button" class="btn btn-basic"  onclick="MA0(); " disabled data-toggle="tooltip" 
+                          data-placement="bottom" title="Sinal negativo"> &minus; </a>          
                         </div>
                       </div>
 
@@ -233,9 +235,11 @@
                         </div>
                         <div class="row">
                           <div class="btn-group">
-                          <a type="button" class="btn btn-info" onclick="PB0();"> C </a>
+                          <a type="button" class="btn btn-info" onclick="PB0();" data-toggle="tooltip" 
+                          data-placement="bottom" title="Limpar"> C </a>
                           <a type="button" class="btn btn-primary" onclick="B0();">0</a>
-                          <a type="button" class="btn btn-basic" onclick="MB0();" disabled> &minus; </a>                        
+                          <a type="button" class="btn btn-basic" onclick="MB0();" disabled data-toggle="tooltip" 
+                          data-placement="bottom" title="Sinal negativo"> &minus; </a>                        
                           </div>
                         </div>
                   </div>
