--- a/pt-br/level05_161098.html
+++ b/pt-br/level05_161098.html
@@ -172,9 +172,11 @@
                       </div>
                       <div class="row">
                         <div class="btn-group">
-                          <a type="button" class="btn btn-info"    onclick="PA0();"> C </a>
+                          <a type="button" class="btn btn-info"    onclick="PA0();" data-toggle="tooltip" 
+                          data-placement="bottom" title="Limpar"> C </a>
                           <a type="button" class="btn btn-primary" onclick="A0();">0</a>
-                          <a type="button" class="btn btn-danger"  onclick="MA0(); " > &minus; </a>          
+                          <a type="button" class="btn btn-danger"  onclick="MA0(); " data-toggle="tooltip" 
+                          data-placement="bottom" title="Sinal negativo"> &minus; </a>          
                         </div>
                       </div>
 
@@ -231,9 +233,11 @@
                         </div>
                         <div class="row">
                           <div class="btn-group">
-                          <a type="button" class="btn btn-info" onclick="PB0();"> C </a>
+                          <a type="button" class="btn btn-info" onclick="PB0();" data-toggle="tooltip" 
+                          data-placement="bottom" title="Limpar"> C </a>
                           <a type="button" class="btn btn-primary" onclick="B0();">0</a>
-                          <a type="button" class="btn btn-danger" onclick="MB0();" > &minus; </a>                        
+                          <a type="button" class="btn btn-danger" onclick="MB0();" data-toggle="tooltip" 
+                          data-placement="bottom" title="Sinal negativo"> &minus; </a>                        
                           </div>
                         </div>
                   </div>
