--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
 
             <div class="col-md-1">
               <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
+              <a> &nbsp; </a>
+              <a href="https://www.facebook.com/plusandtimes/" title="Facebook Page" target="_blank"><i class="fa fa-facebook-square"></i></a>
+
             </div>
         </div>
     </div>
