--- a/level02_818074_loading.html
+++ b/level02_818074_loading.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Improve your mind.">
     <meta name="author" content="Leone Veiga">
 
+    <meta http-equiv="refresh" content="10;url=level02_818074.html" />
+
     <title>Plus and Times</title>
 
     <!-- Bootstrap Core CSS -->
@@ -65,7 +67,7 @@
 
       var xpc = 2;
 
-      var next = "level02_818074_loading.html";
+      var next = "level02_818074.html";
 
   </script>
 
@@ -100,35 +102,18 @@
     <div class="col-xs-3">
     </div>
     <div class="col-xs-6">
-      <h3>Level 01 (<i>Beginner</i>)</h3>
-      <div id="myProgress">
-      <div id="myBar">0%</div>
+      <h3> You got it!!</h3>
+      <img  id="myImage" src="img/sunglass.png" class="img-emoticon-pat" >
+      <h4><i>Loading Level 02 ... </i></h4>
+      <h3 class="name" ><a style="color:#18bc9c;" class="fa fa-refresh fa-spin"> </a> </h3>
+
       </div>
-      
     </div>  
     <div class="col-xs-3"></div>
   </div>
 </div>
 <!-- <hr> =============================================== -->
-<div class="container">
-<div class="row text-center" >
-  <div class="col-xs-2"></div>
-  <div class="col-xs-8">
 
-    <div id="loader">
-      <h3 class="name" ><a style="color:#18bc9c;" class="fa fa-plus fa-spin"> </a> </h3>
-      <h3 class="name" ><a style="color:#18bc9c;" class="fa fa-times fa-spin"> </a> </h3>
-    </div>
-
-    <div style="display:none;" id="myDiv" class="animate-bottom">
-          <h3 class="name"> A <a style="color:rgb(201,48,44);">&plus;</a> B  = <a style="color:gray;" id="soma" ></a></h3>
-          <h3 class="name"> A <a style="color:rgb(201,48,44);">&times;</a> B  = <a style="color:gray;" id="produto"></a></h3>
-    </div>
-
-  </div>
-  <div class="col-xs-2"></div>
-</div>
-</div>
 <!--
 <i class="fa fa-refresh fa-spin" style="font-size:24px"></i>
 <i class="fa fa-cog fa-spin" style="font-size:24px"></i>
