--- a/level02_818074_loading.html
+++ b/level02_818074_loading.html
@@ -31,7 +31,7 @@
       }
 
       #myBar {
-        width: 1%;
+        width: 100%;
         height:5vm;
         background-color: #18bc9c;
         font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -97,21 +97,24 @@
 
 
 <!--  <hr>  =============================================== -->
+<!--  <hr>  =============================================== -->
 <div class="container">
   <div class="row text-center">
     <div class="col-xs-3">
     </div>
     <div class="col-xs-6">
-      <h3> You got it!!</h3>
-      <img  id="myImage" src="img/sunglass.png" class="img-emoticon-pat" >
+      <h3>Level 01 completed! </h3>
+      <div id="myProgress">
+        <div id="myBar">100%</div>
+      </div>
       <h4><i>Loading Level 02 ... </i></h4>
       <h3 class="name" ><a style="color:#18bc9c;" class="fa fa-refresh fa-spin"> </a> </h3>
-
-      </div>
     </div>  
     <div class="col-xs-3"></div>
   </div>
 </div>
+
+
 <!-- <hr> =============================================== -->
 
 <!--
