--- a/level02_818074_loading.html
+++ b/level02_818074_loading.html
@@ -183,7 +183,7 @@
           <div class="col-md-2 col-xs-2">
              <div class="row">
              <h2> &nbsp; </h2>
-              <img  id="myImage" src="img/pensativo50.jpg" class="img-emoticon-pat" >
+              <img  id="myImage" src="img/sunglass.png" class="img-emoticon-pat" >
               <h6 style="color:rgb(201,48,44);"> <b>Tips:</b> Order doesn't matter; Use the virtual keys. </h6>
               </div>
               <div class="row text-center">
