--- a/level02_818074_loading.html
+++ b/level02_818074_loading.html
@@ -184,7 +184,7 @@
              <div class="row">
              <h2> &nbsp; </h2>
               <img  id="myImage" src="img/sunglass.png" class="img-emoticon-pat" >
-              
+              <h2> &nbsp; </h2>
               </div>
               <div class="row text-center">
               <a href="#" onclick="compara();" class="btn btn-primary">Go</a>
