--- a/level03_218683_loading.html
+++ b/level03_218683_loading.html
@@ -182,7 +182,7 @@
           <div class="col-md-2 col-xs-2">
              <div class="row">
              <h2> &nbsp; </h2>
-              <img  id="myImage" src="img/pensativo50.jpg" class="img-emoticon-pat" >
+              <img  id="myImage" src="img/sunglass.png" class="img-emoticon-pat" >
               <h2> &nbsp; </h2>
               </div>
               <div class="row text-center">
