--- a/you_win_loading.html
+++ b/you_win_loading.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Improve your mind.">
     <meta name="author" content="Leone Veiga">
 
+    <meta http-equiv="refresh" content="10;url=you_win.html" />
+
     <title>Plus and Times</title>
 
     <!-- Bootstrap Core CSS -->
@@ -29,7 +31,7 @@
       }
 
       #myBar {
-        width: 1%;
+        width: 100%;
         height:5vm;
         background-color: #18bc9c;
         font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -65,7 +67,7 @@
 
       var xpc = 1;
 
-      var next = "level05_161098_loading.html";
+      var next = "level05_161098.html";
 
   </script>
 
@@ -95,39 +97,26 @@
 
 
 <!--  <hr>  =============================================== -->
+<!--  <hr>  =============================================== -->
 <div class="container">
   <div class="row text-center">
     <div class="col-xs-3">
     </div>
     <div class="col-xs-6">
-      <h3>Level 04 (<i>Hard</i>)</h3>
+      <h3>Level 05 completed! </h3>
       <div id="myProgress">
-      <div id="myBar">0%</div>
+        <div id="myBar">100%</div>
       </div>
+      <h4><i>Loading ... </i></h4>
+      <h3 class="name" ><a style="color:#18bc9c;" class="fa fa-refresh fa-spin"> </a> </h3>
     </div>  
     <div class="col-xs-3"></div>
   </div>
 </div>
+
+
 <!-- <hr> =============================================== -->
-<div class="container">
-<div class="row text-center" >
-  <div class="col-xs-2"></div>
-  <div class="col-xs-8">
 
-    <div id="loader">
-      <h3 class="name" ><a style="color:#18bc9c;" class="fa fa-plus fa-spin"> </a> </h3>
-      <h3 class="name" ><a style="color:#18bc9c;" class="fa fa-times fa-spin"> </a> </h3>
-    </div>
-
-    <div style="display:none;" id="myDiv" class="animate-bottom">
-          <h3 class="name"> A <a style="color:rgb(201,48,44);">&plus;</a> B  = <a style="color:gray;" id="soma" ></a></h3>
-          <h3 class="name"> A <a style="color:rgb(201,48,44);">&times;</a> B  = <a style="color:gray;" id="produto"></a></h3>
-    </div>
-
-  </div>
-  <div class="col-xs-2"></div>
-</div>
-</div>
 <!--
 <i class="fa fa-refresh fa-spin" style="font-size:24px"></i>
 <i class="fa fa-cog fa-spin" style="font-size:24px"></i>
@@ -194,7 +183,7 @@
           <div class="col-md-2 col-xs-2">
              <div class="row">
              <h2> &nbsp; </h2>
-              <img  id="myImage" src="img/pensativo50.jpg" class="img-emoticon-pat" >
+              <img  id="myImage" src="img/sunglass.png" class="img-emoticon-pat" >
               <h2> &nbsp; </h2>
               </div>
               <div class="row text-center">
