--- a/pt-br/level01_925148.html
+++ b/pt-br/level01_925148.html
@@ -277,7 +277,7 @@
             </div>
 
             <div class="col-md-1">
-              <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
+              <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
             </div>
         </div>
     </div>
