--- a/level01_925148_teste.html
+++ b/level01_925148_teste.html
@@ -129,7 +129,7 @@
   <div class="col-xs-2"></div>
 </div>
 
-<div class="row text-center" >
+<div class="row" >
   <div class="col-xs-2"></div>
   <div class="col-xs-8">
     <div class="alert alert-success alert-dismissable" style="width:100%;">
