--- a/level01_925148_teste.html
+++ b/level01_925148_teste.html
@@ -141,12 +141,12 @@
   <div class="col-xs-2"></div>
 </div> -->
 
-<div class="row" >
+<div class="row text-center" >
   <div class="col-xs-2"></div>
   <div class="col-xs-8">
     <div class="alert alert-success alert-dismissable" style="width:100%;">
       <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
-      <b style="color:rgb(201,48,44);">Instructions:</b> You know the <b style="color:rgb(201,48,44);">sum</b> and the <b style="color:rgb(201,48,44);">product</b>. Tell me who is <b style="color:rgb(201,48,44);">A</b> and <b style="color:rgb(201,48,44);">B</b>.
+      <b style="color:rgb(201,48,44);">Instructions:</b> You know the <b style="color:rgb(201,48,44);">sum</b> and the <b style="color:rgb(201,48,44);">product</b>. So, tell me who are <b style="color:rgb(201,48,44);">A</b> and <b style="color:rgb(201,48,44);">B</b>.
     </div>
   </div>
   <div class="col-xs-2"></div>
