--- a/level01_925148_teste.html
+++ b/level01_925148_teste.html
@@ -152,6 +152,17 @@
   <div class="col-xs-2"></div>
 </div>
 
+<div class="row text-center" >
+  <div class="col-xs-2"></div>
+  <div class="col-xs-8">
+    <div class="alert alert-success alert-dismissable" style="width:100%;">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+      <b style="color:rgb(201,48,44);">Tips:</b> Order doesn't matter; Use the virtual keys.
+    </div>
+  </div>
+  <div class="col-xs-2"></div>
+</div>
+
 
 
 
