--- a/level01_925148_teste.html
+++ b/level01_925148_teste.html
@@ -236,7 +236,7 @@
              <div class="row">
              <h2> &nbsp; </h2>
               <img  id="myImage" src="img/pensativo50.jpg" class="img-emoticon-pat" >
-              <h6 style="color:rgb(201,48,44);"> <b>Tips:</b> Order doesn't matter; Use the virtual keys. </h6>
+              <h6 style="color:rgb(201,48,44);"> &nbsp;  </h6>
               </div>
               <div class="row text-center">
               <a href="#" onclick="compara();" class="btn btn-primary">Go</a>
