--- a/contato.html
+++ b/contato.html
@@ -74,7 +74,7 @@
             <h3><i class="fa fa-envelope-o"></i>
             <a href="contato.html">contact.plusandtimes@gmail.com</a></h3>
             <h3><i class="fa fa-facebook-square"></i>
-            <a href="www.facebook.com/plusandtimes" target="_blank">Facebook</a></h3>
+            <a href="https://www.facebook.com/plusandtimes" target="_blank">Facebook</a></h3>
             <h3><div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div></h3>
 
           </div>
