--- a/contato.html
+++ b/contato.html
@@ -71,6 +71,8 @@
         <div class="col-lg-12">
           <div class="intro-message">
             <img src="img/logo100.jpg">
+            <h1>Plus and Times</h1>
+            <h3> &nbsp; </h3>
             <h3><i class="fa fa-envelope-o"></i>
             <a href="contato.html">contact.plusandtimes@gmail.com</a></h3>
             <h3><i class="fa fa-facebook-square"></i>
