--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Improve your mind.">
+    <meta name="description" content="The game for your mind!">
     <meta name="author" content="Leone Veiga">
 
     <title>Plus and Times</title>
@@ -57,12 +57,8 @@
             <div class="intro-message">
               <img src="img/logo100.jpg">
               <h1>Plus and Times</h1>
-              <h3>Improve your mind</h3>
-              <h3>
-                <a href="http://www.plusandtimes.com/pt-br"><img src="img/bra.png" class="img-flag-pat" data-toggle="tooltip" data-placement="top" title="Versão em Português"></a>
-                <a href="http://www.plusandtimes.com"      ><img src="img/eng.png" class="img-flag-pat" data-toggle="tooltip" 
-                data-placement="top" title="English Version"></a>
-              </h3>
+              <h3>The game for your mind!</h3>
+              <h3> &nbsp; </h3>
               <a href="level01_925148.html" class="btn btn-primary">Start</a>
             </div>
           </div>
@@ -81,9 +77,9 @@
 
             <div class="col-md-4">
               <ul class="list-inline social-buttons">
-                  <li><a href="#" title="#" target="_blank"><i class="fa fa-envelope-o"></i></a>
+                  <li><a href="contato.html" title="#" target="_blank"><i class="fa fa-envelope-o"></i></a>
                   </li>
-                  <li><a href="#" title="#" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                  <li><a href="www.facebook.com/plusandtimes/" title="#" target="_blank"><i class="fa fa-facebook-square"></i></a>
                   </li>
                   <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
               </ul>
