--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
             <div class="col-md-4">
               <ul class="list-inline social-buttons">
-                  <li><a href="contato.html" title="#" target="_blank"><i class="fa fa-envelope-o"></i></a>
+                  <li><a href="contato.html" title="email" target="_blank"><i class="fa fa-envelope-o"></i></a>
                   </li>
-                  <li><a href="www.facebook.com/plusandtimes/" title="#" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                  <li><a href="https://www.facebook.com/plusandtimes" title="facebook" target="_blank"><i class="fa fa-facebook-square"></i></a>
                   </li>
                   <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
               </ul>
