--- a/level01_925148.html
+++ b/level01_925148.html
@@ -128,6 +128,35 @@
   </div>
   <div class="col-xs-2"></div>
 </div>
+
+
+<div class="row text-center" >
+  <div class="col-xs-1"></div>
+  <div class="col-xs-10">
+    <div class="alert alert-success alert-dismissable" style="width:100%;">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+      <b style="color:rgb(201,48,44);">Instructions:</b> You know the <b style="color:rgb(201,48,44);">sum</b> and the <b style="color:rgb(201,48,44);">product</b>. Find <b style="color:rgb(201,48,44);">A</b> and <b style="color:rgb(201,48,44);">B</b>. (Close it after read)
+    </div>
+  </div>
+  <div class="col-xs-1"></div>
+</div>
+
+<div class="row text-center" >
+  <div class="col-xs-1"></div>
+  <div class="col-xs-10">
+    <div class="alert alert-info alert-dismissable" style="width:100%;">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+      <b style="color:rgb(201,48,44);">Tips:</b> Order doesn't matter; Use the virtual keys. (Close it after read)
+    </div>
+  </div>
+  <div class="col-xs-1"></div>
+</div>
+
+
+
+
+
+
 </div>
 <!--
 <i class="fa fa-refresh fa-spin" style="font-size:24px"></i>
@@ -196,7 +225,7 @@
              <div class="row">
              <h2> &nbsp; </h2>
               <img  id="myImage" src="img/pensativo50.jpg" class="img-emoticon-pat" >
-              <h6 style="color:rgb(201,48,44);"> <b>Tips:</b> Order doesn't matter; Use the virtual keys. </h6>
+              <h2> &nbsp; </h2>
               </div>
               <div class="row text-center">
               <a href="#" onclick="compara();" class="btn btn-primary">Go</a>
