--- a/level05_161098_loading2.html
+++ b/level05_161098_loading2.html
@@ -257,19 +257,23 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-md-4">
-                <p class="copyright text-muted small">Script developed by <a href="http://www.leoneveiga.com.br" target="_blank"> Leone Veiga</a> - Brazil - 2017</p>
+                <p class="copyright text-muted small">Script developed by <a href="#" > LV</a> - 2017</p>
             </div>
-            <div class="col-md-3">
-                <p class="copyright text-muted small">contact.plusandtimes@gmail.com</p>
+
+            <div class="col-md-4">
+              <ul class="list-inline social-buttons">
+                  <li><a href="contato.html" title="email" target="_blank"><i class="fa fa-envelope-o"></i></a>
+                  </li>
+                  <li><a href="https://www.facebook.com/plusandtimes" title="facebook" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                  </li>
+                  <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+              </ul>
             </div>
 
             <div class="col-md-4">
                 <p class="copyright text-muted small">Template adapted from <a href="http://jekyllthemes.org/" target="_blank">Jekyll Themes</a></p>
             </div>
 
-            <div class="col-md-1">
-              <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
-            </div>
         </div>
     </div>
 </footer>
