--- a/level02_818074_loading.html
+++ b/level02_818074_loading.html
@@ -10,6 +10,8 @@
 
     <meta http-equiv="refresh" content="8;url=level02_818074.html" />
 
+    <meta name="robots" content="noindex">
+
     <title>Plus and Times</title>
 
     <!-- Bootstrap Core CSS -->
