--- a/level04_844676_loading.html
+++ b/level04_844676_loading.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Improve your mind.">
     <meta name="author" content="Leone Veiga">
 
+    <meta name="robots" content="noindex">
+
     <meta http-equiv="refresh" content="6;url=level04_844676.html" />
 
     <title>Plus and Times</title>
