--- a/level05_161098_loading2.html
+++ b/level05_161098_loading2.html
@@ -10,6 +10,8 @@
 
     <meta http-equiv="refresh" content="5;url=you_win.html" />
 
+    <meta name="robots" content="noindex">
+
     <title>Plus and Times</title>
 
     <!-- Bootstrap Core CSS -->
