--- a/level01_925148.html
+++ b/level01_925148.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Improve your mind.">
     <meta name="author" content="Leone Veiga">
 
+    <meta name="robots" content="noindex">
+
+
     <title>Plus and Times</title>
 
     <!-- Bootstrap Core CSS -->
