--- a/level02_818074.html
+++ b/level02_818074.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Improve your mind.">
     <meta name="author" content="Leone Veiga">
 
+    <meta name="robots" content="noindex">
+
     <title>Plus and Times</title>
 
     <!-- Bootstrap Core CSS -->
