--- a/level03_218683_loading.html
+++ b/level03_218683_loading.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Improve your mind.">
     <meta name="author" content="Leone Veiga">
 
+    <meta name="robots" content="noindex">
+
     <meta http-equiv="refresh" content="7;url=level03_218683.html" />
  
     <title>Plus and Times</title>
