--- a/you_win_loading.html
+++ b/you_win_loading.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Improve your mind.">
     <meta name="author" content="Leone Veiga">
 
+    <meta name="robots" content="noindex">
+
     <meta http-equiv="refresh" content="5;url=you_win.html" />
 
     <title>Plus and Times</title>
